--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.13.0",
+    "framer-motion": "^12.4.2",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
